--- a/application-express/views/acetates.jade
+++ b/application-express/views/acetates.jade
@@ -1,26 +1,26 @@
-div.presentationEnCours
+div#thumbnails-pages.presentationEnCours
   ul.unstyled#sortable
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/1-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/2-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/3-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/4-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/1-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/2-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/3-INF4375-XML.png')
     li
-      a.thumbnail(href='')
+      a.thumbnail(href='#')
         img.group1.cboxElement(src='/static/images/4-INF4375-XML.png')
