--- a/application-express/views/arborescence.jade
+++ b/application-express/views/arborescence.jade
@@ -1,20 +1,99 @@
-if userType === 'prof' || userType === 'etudiant'
-  ul.nav.nav-list
-    li.nav-header 
-     h4 Présentations
-    li
-      a(href='#') Dossier 1
+if userType === 'prof'
+     
+  div#creerRepertoireModal.modal.hide.fade(tabindex="-1", role="dialog", aria-labelledby="creerRepertoireTitre", aria-hidden="true")
+    div.modal-header
+      button.close(type="button", data-dismiss="modal", aria-hidden="true")×
+      h3#creerRepertoireTitre Créer un nouveau répertoire
+    div.modal-body
+      p Nom du répertoire
+      input#nomRepertoire(type='text', style='width: 98%;')
+    div.modal-footer
+      button.btn(data-dismiss="modal", aria-hidden="true") Fermer
+      button.btn.btn-primary(data-dismiss="modal", onclick='creerRepertoire()') Créer
+        
+  div#creerFichierModal.modal.hide.fade(tabindex="-1", role="dialog", aria-labelledby="creerFichierTitre", aria-hidden="true")
+    div.modal-header
+      button.close(type="button", data-dismiss="modal", aria-hidden="true")×
+      h3#creerFichierTitre Créer une nouvelle présentation
+    div.modal-body
+      p Nom de la présentation
+      input#nomFichier(type='text', style='width: 98%;')
+    div.modal-footer
+      button.btn(data-dismiss="modal", aria-hidden="true") Fermer
+      button.btn.btn-primary(data-dismiss="modal", onclick='creerFichier()') Créer
+      
+  div#supprimerRepertoireModal.modal.hide.fade(tabindex="-1", role="dialog", aria-labelledby="supprimerRepertoireTitre", aria-hidden="true")
+    div.modal-header
+      button.close(type="button", data-dismiss="modal", aria-hidden="true")×
+      h3#supprimerRepertoireTitre Supprimer un répertoire
+    div.modal-body
+      p Voulez vous supprimer le répertoire <nom à mettre> et tout son contenu?
+    div.modal-footer
+      button.btn(data-dismiss="modal", aria-hidden="true") Annuler
+      button.btn.btn-primary(data-dismiss="modal", onclick='supprimerRepertoire()') Supprimer
+      
+  div#supprimerFichierModal.modal.hide.fade(tabindex="-1", role="dialog", aria-labelledby="supprimerFichierTitre", aria-hidden="true")
+    div.modal-header
+      button.close(type="button", data-dismiss="modal", aria-hidden="true")×
+      h3#supprimerFichierTitre Supprimer une présentation
+    div.modal-body
+      p Voulez-vous supprimer la présentation <nom à mettre>?
+    div.modal-footer
+      button.btn(data-dismiss="modal", aria-hidden="true") Annuler
+      button.btn.btn-primary(data-dismiss="modal", onclick='supprimerFichier()') Supprimer
+        
+  div.btn-toolbar
+    div.btn-group
+      a.btn(href='#', onclick='setRepertoireRacine()')
+        i.icon-home
+      a.btn(href='#')
+        i.icon-arrow-left
+      a.btn(href='#creerRepertoireModal', role='button', data-toggle='modal')
+        i.icon-folder-close
+      a.btn(href='#creerFichierModal', role='button', data-toggle='modal')
+        i.icon-file
+        
+  ul#repertoires.breadcrumb(style='padding:0px 3px 0px 3px; margin:0px 0px 10px 0px;')
     li.active
-      a(href='#') Dossier 2
-      ul.nav.nav-list
-        li
-          a(href='/presentation') Présentation 2.1
-        li.active
-          a(href='/presentation') Présentation 2.2
-    li
-      a(href='/presentation') Présentation 1
-    li
-      a(href='/presentation') Présentation 2
-    if userType === 'prof'
-        li.ajouter
-            a(href='/presentation') Nouvelle présentation
+      span jberger
+
+  ul#fichiers.nav-list(style='list-style-type: none; padding:0; margin:0;')
+  
+    if fichiers
+      each fichier in fichiers
+        li.dropdown
+          a.dropdown-toggle(data-toggle='dropdown', href='#')
+            i.icon-chevron-down
+        
+          ul.dropdown-menu
+            li.disabled
+              a(href='#') #{fichier.nom}
+            li.divider"
+            li
+              a(href='#') Déplacer
+            li
+              a(href='#') Renommer
+            li
+              a(href='#') Supprimer
+          
+          if (fichier.type === 1)
+            i.icon-folder-close    
+            a(href='#', onclick='changerRepertoire("#{fichier.nom}")') #{fichier.nom}
+          else
+            i.icon-file    
+            a(href='#', onclick='') #{fichier.nom}
+            
+  div#erreurArborescence
+  
+else if userType === 'etudiant'
+
+  div.btn-toolbar
+    div.btn-group
+      a.btn(href='#')
+        i.icon-home
+      a.btn(href='#')
+        i.icon-arrow-left
+      a.btn(href='#')
+        i.icon-folder-close
+      a.btn(href='#')
+        i.icon-file
