hack dans le fichier impress, peut faire la job pour la présentation, reste a corriger bug bouton + page éditeur : possibilité de recommencer le module au complet.

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -20,7 +20,7 @@ block primaire
         form(action='/partager-presentation')
           button.btn(type='submit') Partager
     li
-      a.open-popup-link(href="#test-popup") 
+      a.open-popup-link(href="#") 
         button.btn Démarrer la présentation 
       
   div#remplir
