Navigation entre les repertoire est maintenant entirement fonctionnel. - Le path du repertoire courant se met a jour automatiquement - Il est maintenant possible de naviger entre les repertoires a partir des   differents repertoire sur le path affiche

--- a/application-express/views/arborescence.jade
+++ b/application-express/views/arborescence.jade
@@ -70,9 +70,8 @@ if userType === 'prof'
       a.btn(href='#creerFichierModal', role='button', data-toggle='modal')
         i.icon-file
         
-  ul#repertoires.breadcrumb(style='padding:0px 3px 0px 3px; margin:0px 0px 10px 0px;')
-    li.active
-      span jberger
+  ul#repBreadcrumb.breadcrumb(style='padding:0px 3px 0px 3px; margin:0px 0px 10px 0px;')
+    li#dernierRepBread.active jberger
 
   ul#fichiers.nav-list(style='list-style-type: none; padding:0; margin:0;')
   
