--- a/application-express/views/arborescence.jade
+++ b/application-express/views/arborescence.jade
@@ -114,3 +114,19 @@ else if userType === 'etudiant'
         i.icon-home
       a.btn(href='#', onclick='repertoirePrecedent()')
         i.icon-step-backward
+        
+  ul#repBreadcrumb.breadcrumb(style='padding:0px 3px 0px 3px; margin:0px 0px 10px 0px;')
+    li#dernierRepBread.active eric
+
+  ul#fichiers.nav-list(style='list-style-type: none; padding:0; margin:0;')
+  
+    if fichiers
+      each fichier in fichiers
+        li
+          
+          if fichier.type === 1
+            i.icon-folder-close    
+            a(href='#', onclick='changerRepertoire("#{fichier.nom}")') #{fichier.nom}
+          else
+            i.icon-file    
+            a(href='#', onclick='') #{fichier.nom}
