--- a/application-express/public/stylesheets/styles.css
+++ b/application-express/public/stylesheets/styles.css
@@ -5,20 +5,28 @@
 	margin-top: -358px;
 	margin-left: -400px;
 }
-#tiny-pres {
-    width: 352px;
+
+iframe {
+        width: 412px;
 	min-width: 350px;
 	height: 240px;
 	box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
 	border: 10px solid #fff;
 	border: 10px solid rgba(255, 255, 255, 0.9);
-    background: #002E5C;
-	font: 16px "Arial";
+        background: #002E5C;
+	font: 21px "Arial";
 	color : white;
 }
+
+#saveEditor
+{
+  
+        width: 500px;
+	min-width: 350px;
+}
+
 #test-popup 
 {
-	position: block;
 	width: 100%;
 	height: 600px;
 	display: center;
@@ -26,9 +34,3 @@
 	font: 26px "Arial";
 	color : white;
 }
-
-
-
-
-
-
