--- a/application-express/views/index.jade
+++ b/application-express/views/index.jade
@@ -9,6 +9,7 @@ html
     link(href='/static/stylesheets/magnific-popup.css', rel='stylesheet', media='screen')
     link(href='/static/stylesheets/styles.css', rel='stylesheet', media='screen')
     script(src='/static/javascripts/jquery-1.10.1.min.js')
+    script(src='/static/javascripts/jquery-1.10.1.min.js')
     script(src='/static/javascripts/jquery-ui.min.js')
     script(src='/static/javascripts/bootstrap.min.js')
     script(src='/static/javascripts/jquery.magnific-popup.js')
