fonctionnel dans éditer et consulter [2 petits bugs: le dropdown menu de Mr. Enseignant ne fonctionne pas dans les deux cas, et le boutons escape pour quitter la présentation fonctionne uniquement lorsque le border a le focus....je continue.].

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -20,8 +20,8 @@ block primaire
         form(action='/partager-presentation')
           button.btn(type='submit') Partager
     li
-      a.open-popup-link(href="#") 
-        button.btn Démarrer la présentation 
+      a(href="#") 
+        button.btn#open-pres Démarrer la présentation 
       
   div#remplir
   div#saveEditor
