--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -3,6 +3,7 @@ extends navbar-professeur
 
 block jsextra
     script(src='/static/javascripts/editeurpresentation.js')
+    script(src='/static/javascripts/edit-pres.js')
     
 block contenu
   nav#presentations.span3
