fixed consultation avec présentation.

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -1,7 +1,7 @@
 extends presentations
 
 block jsextra
-  script#toRemove(src='/static/javascripts/pres.js')
+  script(src='/static/javascripts/pres.js')
     
 block arborescence
   include arborescence
