normalisation du format pour les documents source

--- a/application-express/views/consulter-presentation.jade
+++ b/application-express/views/consulter-presentation.jade
@@ -26,8 +26,8 @@ block primaire
         button.btn#open-pres Démarrer la présentation 
       
   div#remplir
-  div#saveEditor
-  script#toRemove(src='/static/javascripts/pres.js')
+  iframe#saveEditor(src="/presentation/2.2")
+  //script#toRemove(src='/static/javascripts/pres.js')
  
 block acetates
   include acetates
