--- a/application-express/views/editer-page.jade
+++ b/application-express/views/editer-page.jade
@@ -3,7 +3,7 @@ extends navbar-professeur
 
 block jsextra
     script(src='/static/javascripts/editeurpresentation.js')
-    script(src='/static/javascripts/edit-pres.js')
+    //script(src='/static/javascripts/edit-pres.js')
     link(href='/static/stylesheets/jquery-ui.min.css', rel='stylesheet', media='screen')
 
 block contenu
