presentation diaporama works ... sort of

--- a/application-express/public/stylesheets/styles.css
+++ b/application-express/public/stylesheets/styles.css
@@ -6,7 +6,7 @@
 	margin-left: -400px;
 }
 
-#tiny-iframe , #jimpress p
+#saveEditor
 {
     width: 412px;
 	min-width: 350px;
@@ -14,7 +14,11 @@
 	box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
 	border: 10px solid #fff;
 	border: 10px solid rgba(255, 255, 255, 0.9);
-    background: #002E5C;
-	color : white;
+	background: white;
 }
 
+/* TODO: gabarit de la presentation 
+ genre...
+background: #002E5C;
+	color : white;
+*/
