--- a/application-express/public/stylesheets/styles.css
+++ b/application-express/public/stylesheets/styles.css
@@ -17,6 +17,18 @@
 	background: white;
 }
 
+#thumbnails-pages a.thumbnail {
+    position: relative;
+}
+
+#thumbnails-pages a.thumbnail .numero-page {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    color: black;
+    font-size: 3em;
+}
+
 /* TODO: gabarit de la presentation 
  genre...
 background: #002E5C;
