Correction de bug et Modification - Cliquer sur un fichier dans l'arborescence est maintenant relie a la   presentation et l'editeur. - Les boutons dans la section admin ne redirige plus vers la page 404 - La page de recherche affiche l'arborescence. - Ajouter du code javascript pour activer le bouton creer un usager, il   faut maintenant entrer une valeur dans chaque champ pour l'activer. - La fenetre de confirmation pour supprimer une page utilise maintenant le   layout de bootstrap. - Le texte de confirmation pour supprimer un repertoire ne fait plus   mention de supprimer tout le contenu de ce repertoire. - La page de presentation d'un etudiant affiche la bonne navbar - Remplacer le texte des 'ajouter apres/avant' par des boutons - Mis de la transparence sur le numero des pages sur les thumbnails pour   que ce soit moins agressif - Modifier les presentations existantes pour qu'ils suivent le nouveau   format. - Creer une nouvelle presentation utilise le nouveau format.

--- a/application-express/views/arborescence.jade
+++ b/application-express/views/arborescence.jade
@@ -27,10 +27,10 @@ if userType === 'prof'
       button.close(type="button", data-dismiss="modal", aria-hidden="true")×
       h3#supprimerRepertoireTitre Supprimer un répertoire
     div.modal-body
-      p Voulez vous supprimer le répertoire &nbsp
+      p Voulez vous supprimer le répertoire&nbsp
         b
-          span#nomRepSupprimer (nom à mettre) 
-        span &nbsp et tout son contenu?
+          span#nomRepSupprimer 
+        span ?
     div.modal-footer
       button.btn(data-dismiss="modal", aria-hidden="true") Annuler
       button#btnSupprimerRepModal.btn.btn-primary(data-dismiss="modal", onclick="supprimerRepertoire('')") Supprimer
@@ -102,7 +102,7 @@ if userType === 'prof'
             a(href='#', onclick='changerRepertoire("#{fichier.nom}")') #{fichier.nom}
           else
             i.icon-file    
-            a(href='#', onclick='') #{fichier.nom}
+            a(href='/presentation?fichier=#{fichier.nom}', onclick='') #{fichier.nom}
             
   div#erreurArborescence
   
@@ -129,4 +129,4 @@ else if userType === 'etudiant'
             a(href='#', onclick='changerRepertoire("#{fichier.nom}")') #{fichier.nom}
           else
             i.icon-file    
-            a(href='#', onclick='') #{fichier.nom}
+            a(href='/presentation?fichier=#{fichier.nom}', onclick='') #{fichier.nom}
