--- a/application-express/views/gestion-admin.jade
+++ b/application-express/views/gestion-admin.jade
@@ -35,42 +35,42 @@ block contenu
                   td
                     span Nom
                   td
-                    input(type='text', name='nom', maxlength='32')
+                    input#creerNom(type='text', name='nom', maxlength='32', onchange='protoActiverCreerBtn()')
                 tr
                   td
                     span Prénom
                   td
-                    input(type='text', name='prenom', maxlength='32')
+                    input#creerPrenom(type='text', name='prenom', maxlength='32', onchange='protoActiverCreerBtn()')
                 tr
                   td
                     span Courriel
                   td
-                    input(type='text', name='courriel')
+                    input#creerCourriel(type='text', name='courriel', onchange='protoActiverCreerBtn()')
                 tr
                   td
                     span Identifiant
                   td
-                    input(type='text', name='identifiant')
+                    input#creerIdentifiant(type='text', name='identifiant', onchange='protoActiverCreerBtn()')
                 tr
                   td
                     span Type
                   td
                     label.radio Professeur
-                      input(type='radio', name='type', value='professeur')
+                      input#creerProfesseur(type='radio', name='type', value='professeur', onchange='protoActiverCreerBtn()')
                     label.radio Étudiant
-                      input(type='radio', name='type', value='etudiant')
+                      input#creerEtudiant(type='radio', name='type', value='etudiant', onchange='protoActiverCreerBtn()')
                 tr(colspan='2')
                   td 
-                    input.btn.btn-primary(type='submit', value='Inscrire Utilisateur', onclick='myFunction(); return false;')
+                    button#btnCreerUtilisateur.btn.btn-primary(type='button', disabled) Créer Utilisateur
           div#importer.tab-pane.fade
             form
               input.btn.btn-file(type='file')
-              input.btn.btn-primary(type='submit', value='Importer Liste', onclick='myFunction(); return false;')
+              button.btn.btn-primary(type='button') Importer Liste
                       div#importer.tab-pane.fade
           div#supprimer.tab-pane.fade
             form.form-search
               input.input-medium.search-query(type='text')
-              input.btn(type='button', value='Rechercher', onclick='protoRechercheSupprimer()')
+              button.btn(type='button', onclick='protoRechercheSupprimer()') Rechercher
             form
               table
                 tr
@@ -103,11 +103,11 @@ block contenu
                       input#supprimerEtudiant(type='radio', name='type', value='etudiant', disabled)
                 tr(colspan='2')
                   td 
-                    input#btnSupprimer.btn.btn-primary(type='submit', value='Supprimer Utilisateur', disabled,  onclick='myFunction(); return false;')
+                    button#btnSupprimer.btn.btn-primary(type='button', disabled) Supprimer Utilisateur
           div#consulterModifier.tab-pane.fade
             form.form-search
               input.input-medium.search-query(type='text')
-              input.btn(type='button', value='Rechercher', onclick='protoRechercheConMod()')
+              button.btn(type='button', onclick='protoRechercheConMod()') Rechercher
             form
               table
                 tr
@@ -158,4 +158,4 @@ block contenu
                       input#conModDesactive(type='radio', name='statut', value='desactive', onchange=' onchangeConsulterModifier()')
                 tr(colspan='2')
                   td 
-                    input#btnModifier.btn.btn-primary(type='submit', value='Modifier Utilisateur', disabled,  onclick='myFunction(); return false;')
+                    button#btnModifier.btn.btn-primary(type='button', disabled) Modifier Utilisateur
