--- a/application-express/views/presentations.jade
+++ b/application-express/views/presentations.jade
@@ -1,5 +1,3 @@
-extends navbar-professeur
-
 block contenu
   nav#presentations.span3
     block arborescence
@@ -8,6 +6,7 @@ block contenu
     block breadcrumb
 
     block primaire
-    
-  #acetates.span3(style='height: 600px; overflow-y: scroll;')
-    block acetates
+  
+  if presentationFichier  
+    acetates.span3(style='height: 600px; overflow-y: scroll;')
+      block acetates
