--- a/application-express/views/contactez-nous.jade
+++ b/application-express/views/contactez-nous.jade
@@ -3,4 +3,9 @@
     include arborescence
   
 .span8
-  p On existe pas encore officiellement. (À faire)
+    .alert.alert-info
+        h4 Contactez-nous
+
+    textarea(style='width:95%; resize:none; height:100px;', placeholder='Écrivez votre message ici.')
+
+    button.btn(onclick='return false;') Envoyez votre message
